--- a/src/mod_stats_by_aircraft/templates/aircraft_pilot_rankings.html
+++ b/src/mod_stats_by_aircraft/templates/aircraft_pilot_rankings.html
@@ -1,25 +1,70 @@
 {% extends 'base.html' %}
 {% load i18n staticfiles tz stats filters %}
-{% block title %}{% trans 'Aircraft Overview' context 'pilot_nav_tab' %} / {{ player.nickname }} / {{ block.super }}{% endblock title %}
+{% block title %}{% trans 'Aircraft Pilot Rankings' %} : {{ aircraft_bucket.aircraft.name }} / {{ block.super }}{% endblock title %}
 
 {% block head %}
 {% endblock head %}
 
 {% block nav_tabs %}
-{% include 'inline/pilot_tabs.html' %}
+{% include 'inline/aircraft_tabs.html' %}
 {% endblock nav_tabs %}
 
 {% block content %}
 <section id="content">
-    <div class="wrapper aircraft" style="width: 1400px;">
+    <div class="wrapper aircraft" style="width: 1450px;">
         <div class="content_head">
-            <div class="content_title" style="width: 620px">
-                {% trans 'Aircraft Overview' context 'pilot_nav_tab' %}
+            <div class="content_title" style="width: 700px">
+                {% trans 'Aircraft Pilot Rankings' %} : {{ aircraft_bucket.aircraft.name }}
             </div>
+            {% if aircraft_bucket.has_bomb_variant and not aircraft_bucket.has_juiced_variant %}
             <label>{% trans 'Filter by:' %}</label>
             <select style="background: #303030; border: 1px solid #252525; width: 400px;"
                     onchange="if (this.value) window.location.href=this.value">
-                {% if filter_type == "NO_FILTER" %}
+                {% if aircraft_bucket.filter_type == aircraft_bucket.NO_FILTER %}
+                <option value="{{ no_filter_url}}" selected>{% trans 'no filter' %}</option>
+                <option value="{{ bombs_url }}">{% trans 'with bombs only' %}</option>
+                <option value="{{ no_mods_url }}">{% trans 'without bombs only' %}</option>
+                {% endif %}
+                {% if aircraft_bucket.filter_type == aircraft_bucket.BOMBS %}
+                <option value="{{ no_filter_url}}">{% trans 'no filter' %}</option>
+                <option value="{{ bombs_url }}" selected>{% trans 'with bombs only' %}</option>
+                <option value="{{ no_mods_url }}">{% trans 'without bombs only' %}</option>
+                {% endif %}
+                {% if aircraft_bucket.filter_type == aircraft_bucket.NO_BOMBS_NO_JUICE %}
+                <option value="{{ no_filter_url}}">{% trans 'no filter' %}</option>
+                <option value="{{ bombs_url }}">{% trans 'with bombs only' %}</option>
+                <option value="{{ no_mods_url }}" selected>{% trans 'without bombs only' %}</option>
+                {% endif %}
+            </select>
+            {% endif %}
+
+            {% if not aircraft_bucket.has_bomb_variant and aircraft_bucket.has_juiced_variant %}
+            <label>{% trans 'Filter by:' %}</label>
+            <select style="background: #303030; border: 1px solid #252525; width: 400px;"
+                    onchange="if (this.value) window.location.href=this.value">
+                {% if aircraft_bucket.filter_type == aircraft_bucket.NO_FILTER %}
+                <option value="{{ no_filter_url}}" selected>{% trans 'no filter' %}</option>
+                <option value="{{ juiced_url }}">{% trans 'with upgraded fuel/engine' %}</option>
+                <option value="{{ no_mods_url }}">{% trans 'without upgraded fuel/engine' %}</option>
+                {% endif %}
+                {% if aircraft_bucket.filter_type == aircraft_bucket.JUICED %}
+                <option value="{{no_filter_url}}">{% trans 'no filter' %}</option>
+                <option value="{{ juiced_url }}" selected>{% trans 'with upgraded fuel/engine' %}</option>
+                <option value="{{ no_mods_url }}">{% trans 'without upgraded fuel/engine' %}</option>
+                {% endif %}
+                {% if aircraft_bucket.filter_type == aircraft_bucket.NO_BOMBS_NO_JUICE %}
+                <option value="{{ no_filter_url}}">{% trans 'no filter' %}</option>
+                <option value="{{ juiced_url }}">{% trans 'with upgraded fuel/engine' %}</option>
+                <option value="{{ no_mods_url }}" selected>{% trans 'without upgraded fuel/engine' %}</option>
+                {% endif %}
+            </select>
+            {% endif %}
+
+            {% if aircraft_bucket.has_bomb_variant and aircraft_bucket.has_juiced_variant %}
+            <label>{% trans 'Filter by:' %}</label>
+            <select style="background: #303030; border: 1px solid #252525; width: 400px;"
+                    onchange="if (this.value) window.location.href=this.value">
+                {% if aircraft_bucket.filter_type == aircraft_bucket.NO_FILTER %}
                 <option value="{{ no_filter_url }}" selected>{% trans 'no filter' %}</option>
                 <option value="{{ juiced_url }}">{% trans 'with upgraded engine and no bombs' %}</option>
                 <option value="{{ no_mods_url }}">{% trans 'without upgraded engine and no bombs' %}</option>
@@ -27,7 +72,7 @@
                 <option value="{{ bombs_url }}">{% trans 'without upgraded fuel/engine and bombs' %}</option>
                 {% endif %}
 
-                {% if filter_type == "JUICE" %}
+                {% if aircraft_bucket.filter_type == aircraft_bucket.JUICED %}
                 <option value="{{ no_filter_url }}">{% trans 'no filter' %}</option>
                 <option value="{{ juiced_url }}" selected>{% trans 'with upgraded engine and no bombs' %}</option>
                 <option value="{{ no_mods_url }}">{% trans 'without upgraded engine and no bombs' %}</option>
@@ -35,7 +80,7 @@
                 <option value="{{ bombs_url }}">{% trans 'without upgraded fuel/engine and bombs' %}</option>
                 {% endif %}
 
-                {% if filter_type == "NO_BOMBS_JUICE" %}
+                {% if aircraft_bucket.filter_type == aircraft_bucket.NO_BOMBS_NO_JUICE %}
                 <option value="{{ no_filter_url }}">{% trans 'no filter' %}</option>
                 <option value="{{ juiced_url }}">{% trans 'with upgraded engine and no bombs' %}</option>
                 <option value="{{ no_mods_url }}" selected>{% trans 'without upgraded engine and no bombs' %}</option>
@@ -43,7 +88,7 @@
                 <option value="{{ bombs_url }}">{% trans 'without upgraded fuel/engine and bombs' %}</option>
                 {% endif %}
 
-                {% if filter_type == "ALL" %}
+                {% if aircraft_bucket.filter_type == aircraft_bucket.ALL %}
                 <option value="{{ no_filter_url }}">{% trans 'no filter' %}</option>
                 <option value="{{ juiced_url }}">{% trans 'with upgraded engine and no bombs' %}</option>
                 <option value="{{ no_mods_url }}">{% trans 'without upgraded engine and no bombs' %}</option>
@@ -51,7 +96,7 @@
                 <option value="{{ bombs_url }}">{% trans 'without upgraded fuel/engine and bombs' %}</option>
                 {% endif %}
 
-                {% if filter_type == "BOMBS" %}
+                {% if aircraft_bucket.filter_type == aircraft_bucket.BOMBS %}
                 <option value="{{ no_filter_url }}">{% trans 'no filter' %}</option>
                 <option value="{{ juiced_url }}">{% trans 'with upgraded engine and no bombs' %}</option>
                 <option value="{{ no_mods_url }}">{% trans 'without upgraded engine and no bombs' %}</option>
@@ -60,34 +105,65 @@
                 {% endif %}
 
             </select>
+            {% endif %}
             <div class="form_search" style="margin-top: 9px;">
                 <form action="" method="GET">
                     <input type="hidden" name="tour" value="{{ request.tour.id }}"/>
-                    <input type="text" name="search" value="" placeholder="{% trans 'Search aircraft' %}">
+                    <input type="text" name="search" value="" placeholder="{% trans 'Search pilot' %}">
                 </form>
             </div>
-            <div class="content_title_sm">{% trans 'pilot' context 'pilot_awards' %}: {{ player.nickname }}</div>
             <div class="content_title_sm" id="sort_by_text"></div>
-
         </div>
 
-        {% if all_aircraft %}
-        <div class="content_table">
+        <div class="head_left">
+            {% if aircraft_bucket.coalition == 1 %}
+            <img src="{% static 'img/flag/coal_1.png' %}" width="" height="" class="coal_flag"
+                 title="{{ COAL_1_NAME }}" alt="{{ COAL_1_NAME }}" align="left">
+            <div class="coalition">{% trans 'coalition' %}: <span>{{ COAL_1_NAME }}</span></div>
+            {% else %}
+            <img src="{% static 'img/flag/coal_2.png' %}" width="" height="" class="coal_flag"
+                 title="{{ COAL_2_NAME }}" alt="{{ COAL_2_NAME }}" align="left">
+            <div class="coalition">{% trans 'coalition' %}: <span>{{ COAL_2_NAME }}</span></div>
+            {% endif %}
+            <img src="{{ aircraft_bucket.aircraft.aircraft_image }}" width="670" height="240" class="fav_aircraft"
+                 title="{% trans aircraft_bucket.aircraft.name %}" alt="{% trans aircraft_bucket.aircraft.name %}">
+        </div>
+
+
+        {% if pilot_aircraft %}
+        <div class="content_table" style="width: 90%">
             <div class="head_row">
                 <div class="cell" style="width: 60px;"></div>
                 <div class="cell"></div>
-                <div class="cell" style="width: 60px;"></div>
+                <div class="cell" style="width: 90px;">
+                    <a class="sort_by" href="?sort_by=-kills">
+                        <img src="{% static 'img/icons/small/ak.png' %}" width="18" height="18"
+                             alt="{% trans 'Air Kills' %}" title="{% trans 'Air Kills' %}">
+                    </a>
+                </div>
+                <div class="cell" style="width: 90px;">
+                    <a class="sort_by" href="?sort_by=-max_ak_streak">
+                        <img src="{% static 'img/icons/small/ak-streak.png' %}" width="18" height="18"
+                             alt="{% trans 'Best air kill streak' %}" title="{% trans 'Best air kill streak' %}">
+                    </a>
+                </div>
+                <div class="cell" style="width: 90px;">
+                    <a class="sort_by" href="?sort_by=-ground_kills">
+                        <img src="{% static 'img/icons/small/gk.png' %}" width="18" height="18"
+                             alt="{% trans 'Ground Kills' %}" title="{% trans 'Ground Kills' %}">
+                    </a>
+                </div>
+                <div class="cell" style="width: 90px;">
+                    <a class="sort_by" href="?sort_by=-max_gk_streak">
+                        <img src="{% static 'img/icons/small/gk-streak.png' %}" width="18" height="18"
+                             alt="{% trans 'Ground Kills' %}" title="{% trans 'Best Ground streak' %}">
+                    </a>
+                </div>
                 <div class="cell" style="width: 90px;">
                     <a class="sort_by" href="?sort_by=-total_flight_time">
                         <img src="{% static 'img/icons/small/ft.png' %}" width="18" height="18"
                              alt="{% trans 'Flight Time (days:hours:minutes)' %}"
                              title="{% trans 'Flight Time (days:hours:minutes)' %}">
-                    </a>
-                </div>
-                <div class="cell" style="width: 90px;">
-                    <a class="sort_by" href="?sort_by=-kills">
-                        <img src="{% static 'img/icons/small/ak.png' %}" width="18" height="18"
-                             alt="{% trans 'Air Kills' %}" title="{% trans 'Air Kills' %}">
                     </a>
                 </div>
                 <div class="cell" style="width: 90px;">
@@ -100,12 +176,6 @@
                     <a class="sort_by" href="?sort_by=-khr">
                         <img src="{% static 'img/icons/small/khr.png' %}" width="18" height="18"
                              alt="K/Hr" title="K/Hr">
-                    </a>
-                </div>
-                <div class="cell" style="width: 90px;">
-                    <a class="sort_by" href="?sort_by=-ground_kills">
-                        <img src="{% static 'img/icons/small/gk.png' %}" width="18" height="18"
-                             alt="{% trans 'Ground Kills' %}" title="{% trans 'Ground Kills' %}">
                     </a>
                 </div>
                 <div class="cell" style="width: 90px;">
@@ -136,62 +206,37 @@
                     </a>
                 </div>
                 <div class="cell" style="width: 90px;">
-                    <a class="sort_by" href="?sort_by=-plane_survivability">
-                        <img src="{% static 'img/icons/small/plane_surv.png' %}" width="18" height="18"
-                             alt="{% trans 'Plane Durability' %}" title="{% trans 'Plane Durability' %}">
-                    </a>
-                </div>
-                <div class="cell" style="width: 90px;">
-                    <a class="sort_by" href="?sort_by=-plane_lethality">
-                        <img src="{% static 'img/icons/small/plane_lethal.png' %}" width="18" height="18"
-                             alt="{% trans 'Plane Lethality' %}" title="{% trans 'Plane Lethality' %}">
-                    </a>
-                </div>
-                <div class="cell" style="width: 90px;">
                     <a class="sort_by" href="?sort_by=-rating">
                         <img src="{% static 'img/icons/small/rating.png' %}" width="18" height="18"
                              alt="{% trans 'Rating' %}" title="{% trans 'Rating' %}">
                     </a>
                 </div>
             </div>
-            {% for aircraft_bucket in all_aircraft %}
-            <a class="row" href="{{ aircraft_bucket.get_aircraft_url }}">
-                <div class="cell">{{ all_aircraft.start_index|add:forloop.counter0 }}</div>
-                <div class="cell" style="text-align: left;">{{ aircraft_bucket.aircraft.name }}</div>
-                <div>
-                    {% include 'inline/table_coal_pref_icon.html' with coal_pref=aircraft_bucket.coalition %}
-                </div>
-                <div class="cell">{{ aircraft_bucket.total_flight_time|seconds_to_long_time }}</div>
+            {% for aircraft_bucket in pilot_aircraft %}
+            <a class="row" href="{{ aircraft_bucket.get_pilot_filtered_url }}">
+                <div class="cell">{{ pilot_aircraft.start_index|add:forloop.counter0 }}</div>
+                <div class="cell" style="text-align: left;">{{ aircraft_bucket.player.profile.nickname }}</div>
                 <div class="cell">{{ aircraft_bucket.kills }}</div>
+                <div class="cell">{{ aircraft_bucket.max_ak_streak }}</div>
+                <div class="cell">{{ aircraft_bucket.ground_kills }}</div>
+                <div class="cell">{{ aircraft_bucket.max_gk_streak }}</div>
+                <div class="cell">{{ aircraft_bucket.total_flight_time|seconds_to_long_time }}</div>
                 <div class="cell">{{ aircraft_bucket.kd }}</div>
                 <div class="cell">{{ aircraft_bucket.khr }}</div>
-                <div class="cell">{{ aircraft_bucket.ground_kills }}</div>
                 <div class="cell">{{ aircraft_bucket.gkd }}</div>
                 <div class="cell">{{ aircraft_bucket.gkhr }}</div>
                 <div class="cell">{{ aircraft_bucket.accuracy }}%</div>
                 <div class="cell">{{ aircraft_bucket.bomb_rocket_accuracy }}%</div>
-                <div class="cell">{{ aircraft_bucket.plane_survivability }}%</div>
-                <div class="cell">{{ aircraft_bucket.plane_lethality }}%</div>
                 <div class="cell" title="{{ aircraft_bucket.rating }}">{{ aircraft_bucket.rating_format }}</div>
             </a>
             {% endfor %}
         </div>
-        {% if all_aircraft.paginator.num_pages > 1 %}
+        {% if pilot_aircraft.paginator.num_pages > 1 %}
         <div class="paginator3000" id="paginator"></div>
         {% endif %}
         {% endif %}
 
         <div class="info" style="padding-top: 20px;">
-            <div>
-                {% blocktrans trimmed %}
-                Due to technical reasons, kills from your turret gunners are not counted towards the killboard. Plane and pilot lethality are also affected. </br>
-                {% endblocktrans %}
-                {% blocktrans trimmed %}
-                * Plane Durability is percent of sorties the plane survived after taking damage. </br>
-                * Plane Lethality is the percent of enemy aircraft which went down after taking damage from this plane.
-                Assists count. </br>
-                {% endblocktrans %}
-            </div>
             <div>
                 {% blocktrans trimmed %}
                 <strong>Attention!</strong> Algorithms collection statistics IL2 stats differs from statistics in-game.
@@ -229,7 +274,7 @@
 
         $(document).ready(function() {
             uri_sort_by('-rating', sort_by_text);
-            var paginator = new Paginator('paginator', {{ all_aircraft.paginator.num_pages }}, 15, {{ all_aircraft.number }}, uri_paginator);
+            var paginator = new Paginator('paginator', {{ pilot_aircraft.paginator.num_pages }}, 15, {{ pilot_aircraft.number }}, uri_paginator);
         });
 
 
