--- a/src/mod_stats_by_aircraft/templates/all_aircraft.html
+++ b/src/mod_stats_by_aircraft/templates/all_aircraft.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <section id="content">
-    <div class="wrapper aircraft" style="width: 1400px;">
+    <div class="wrapper aircraft" style="width: 1500px;">
         <div class="content_head">
             <div class="content_title" style="width: 620px">
                 {% trans 'Aircraft Rankings' %}
@@ -79,6 +79,12 @@
                     </a>
                 </div>
                 <div class="cell" style="width: 90px;">
+                    <a class="sort_by" href="?sort_by=-kills">
+                        <img src="{% static 'img/icons/small/ak.png' %}" width="18" height="18"
+                             alt="{% trans 'Air Kills' %}" title="{% trans 'Air Kills' %}">
+                    </a>
+                </div>
+                <div class="cell" style="width: 90px;">
                     <a class="sort_by" href="?sort_by=-kd">
                         <img src="{% static 'img/icons/small/kd.png' %}" width="18" height="18"
                              alt="K/D" title="K/D">
@@ -88,6 +94,12 @@
                     <a class="sort_by" href="?sort_by=-khr">
                         <img src="{% static 'img/icons/small/khr.png' %}" width="18" height="18"
                              alt="K/Hr" title="K/Hr">
+                    </a>
+                </div>
+                <div class="cell" style="width: 90px;">
+                    <a class="sort_by" href="?sort_by=-ground_kills">
+                        <img src="{% static 'img/icons/small/gk.png' %}" width="18" height="18"
+                             alt="{% trans 'Ground Kills' %}" title="{% trans 'Ground Kills' %}">
                     </a>
                 </div>
                 <div class="cell" style="width: 90px;">
@@ -147,8 +159,10 @@
                     {% include 'inline/table_coal_pref_icon.html' with coal_pref=aircraft_bucket.coalition %}
                 </div>
                 <div class="cell">{{ aircraft_bucket.total_flight_time|seconds_to_long_time }}</div>
+                <div class="cell">{{ aircraft_bucket.kills }}</div>
                 <div class="cell">{{ aircraft_bucket.kd }}</div>
                 <div class="cell">{{ aircraft_bucket.khr }}</div>
+                <div class="cell">{{ aircraft_bucket.ground_kills }}</div>
                 <div class="cell">{{ aircraft_bucket.gkd }}</div>
                 <div class="cell">{{ aircraft_bucket.gkhr }}</div>
                 <div class="cell">{{ aircraft_bucket.accuracy }}%</div>
