--- a/src/mod_stats_by_aircraft/templates/base.html
+++ b/src/mod_stats_by_aircraft/templates/base.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles tz stats %}
+r{% load i18n staticfiles tz stats %}
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}">
 <head>
@@ -83,7 +83,6 @@
                 {% trans 'Rankings' %} &#x25BE;
                 <div class="nav_sub_menu_items">
                     <a href="{% url 'stats:pilots' %}?tour={{ request.tour.id }}">{% trans 'Pilot Rankings' %}</a>
-					<a href="{% url 'stats:tankmans' %}?tour={{ request.tour.id }}">{% trans 'Tankman Rankings' %}</a>
                     <a href="{% url 'stats:squads' %}?tour={{ request.tour.id }}">{% trans 'Squad Rankings' %}</a>
                     <a href="{% url 'stats:all_aircraft' %}?tour={{ request.tour.id }}">{% trans 'Aircraft Rankings' %}</a>
                 </div>
@@ -151,37 +150,49 @@
                 <div class="footer_lang">
                     |
                     {# TODO хак, переделать на шаблонный тег #}
-                    {% if LANGUAGE_CODE == 'ru' %}
-                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English version</a>
-                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche Version</a>
-                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish version</a>
-                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française version</a>
+                     {% if LANGUAGE_CODE == 'ru' %}
+                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English</a>
+                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche</a>
+                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish</a>
+                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française</a>
+                        <a class="lang" href="/pt-br{{ request.get_full_path|slice:'3:' }}">Portuguese</a>
                     {% elif LANGUAGE_CODE == 'en' %}
-                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русская версия</a>
-                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche Version</a>
-                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish version</a>
-                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française version</a>
+                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русский</a>
+                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche</a>
+                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish</a>
+                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française</a>
+                        <a class="lang" href="/pt-br{{ request.get_full_path|slice:'3:' }}">Portuguese</a>
                     {% elif LANGUAGE_CODE == 'de' %}
-                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English version</a>
-                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русская версия</a>
-                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish version</a>
-                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française version</a>
+                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English</a>
+                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русский</a>
+                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish</a>
+                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française</a>
+                        <a class="lang" href="/pt-br{{ request.get_full_path|slice:'3:' }}">Portuguese</a>
                     {% elif LANGUAGE_CODE == 'es' %}
-                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English version</a>
-                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русская версия</a>
-                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche Version</a>
-                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française version</a>
+                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English</a>
+                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русский</a>
+                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche</a>
+                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française</a>
+                        <a class="lang" href="/pt-br{{ request.get_full_path|slice:'3:' }}">Portuguese</a>
                     {% elif LANGUAGE_CODE == 'fr' %}
-                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English version</a>
-                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русская версия</a>
-                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche Version</a>
-                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish version</a>
+                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English</a>
+                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русский</a>
+                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche</a>
+                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish</a>
+                        <a class="lang" href="/pt-br{{ request.get_full_path|slice:'3:' }}">Portuguese</a>
+                    {%  elif LANGUAGE_CODE == 'pt-br' %}
+                        <a class="lang" href="/en{{ request.get_full_path|slice:'6:' }}">English</a>
+                        <a class="lang" href="/ru{{ request.get_full_path|slice:'6:' }}">Русский</a>
+                        <a class="lang" href="/de{{ request.get_full_path|slice:'6:' }}">Deutsche</a>
+                        <a class="lang" href="/es{{ request.get_full_path|slice:'6:' }}">Spanish</a>
+                        <a class="lang" href="/fr{{ request.get_full_path|slice:'6:' }}">Française</a>
                     {% else %}
-                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English version</a>
-                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русская версия</a>
-                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche Version</a>
-                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish version</a>
-                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française version</a>
+                        <a class="lang" href="/en{{ request.get_full_path|slice:'3:' }}">English</a>
+                        <a class="lang" href="/ru{{ request.get_full_path|slice:'3:' }}">Русский</a>
+                        <a class="lang" href="/de{{ request.get_full_path|slice:'3:' }}">Deutsche</a>
+                        <a class="lang" href="/es{{ request.get_full_path|slice:'3:' }}">Spanish</a>
+                        <a class="lang" href="/fr{{ request.get_full_path|slice:'3:' }}">Française</a>
+                        <a class="lang" href="/pt-br{{ request.get_full_path|slice:'3:' }}">Portuguese</a>
                     {% endif %}
                 </div>
             </div>
