--- a/src/mod_stats_by_aircraft/templates/inline/aircraft_tabs.html
+++ b/src/mod_stats_by_aircraft/templates/inline/aircraft_tabs.html
@@ -3,5 +3,6 @@
     <div class="nav_tabs">
         <a href="{{ aircraft_bucket.get_aircraft_url }}">{% trans 'Aircraft Statistics' context 'pilot_nav_tab' %}</a>
         <a href="{{ aircraft_bucket.get_killboard_url }}">{% trans 'Aircraft Killboard' context 'pilot_nav_tab' %}</a>
+        <a href="{{ aircraft_bucket.get_aircraft_pilot_rankings_url }}">{% trans 'Aircraft Pilot Rankings' context 'pilot_nav_tab' %}</a>
     </div>
 </nav>
