Fix bugs that prevented bundle from running.

--- a/src/mod_rating_by_type/templates/main.html
+++ b/src/mod_rating_by_type/templates/main.html
@@ -164,6 +164,8 @@
                 </div>
                 {% endif %}
 
+                <div class="clearfix"></div>
+
                 {% if toptank_24 %}
                 <div class="top_pilots" style="float: left;">
                     <div class="top_title">
@@ -439,7 +441,7 @@
                 </div>
                 {% endif %}
 
-                 {% if total_active_pilots %}
+                {% if total_active_pilots %}
                 <div class="active_players">
                     <div class="title">
                         {% trans 'Active pilots' %}
