--- a/src/mod_rating_by_type/templates/pilot_sortie.html
+++ b/src/mod_rating_by_type/templates/pilot_sortie.html
@@ -288,7 +288,7 @@
                         <div class="right score">
                             {{ sortie.killboard_pvp.tank_heavy }}
                             &times;
-                            {{ score_dict.tank_heavy.ai }}
+                            {{ score_dict.tank_heavy.base }}
                         </div>
                     </div>
                 {% endif %}
@@ -302,7 +302,7 @@
                         <div class="right score">
                             {{ sortie.killboard_pvp.tank_medium }}
                             &times;
-                            {{ score_dict.tank_medium.ai }}
+                            {{ score_dict.tank_medium.base }}
                         </div>
                     </div>
                 {% endif %}
@@ -316,7 +316,7 @@
                         <div class="right score">
                             {{ sortie.killboard_pvp.tank_light }}
                             &times;
-                            {{ score_dict.tank_light.ai }}
+                            {{ score_dict.tank_light.base }}
                         </div>
                     </div>
                 {% endif %}
@@ -330,7 +330,7 @@
                         <div class="right score">
                             {{ sortie.killboard_pvp.truck }}
                             &times;
-                            {{ score_dict.truck.ai }}
+                            {{ score_dict.truck.base }}
                         </div>
                     </div>
                 {% endif %}
