--- a/src/mod_rating_by_type/templates/gunner_sortie_log.html
+++ b/src/mod_rating_by_type/templates/gunner_sortie_log.html
@@ -44,6 +44,10 @@
             <img src="{% static 'img/sortie/status/landed_big.png' %}" width="28" height="28"
                  title="{% trans 'Landed' context 'sortie_status' %}"
                  alt="{% trans 'Landed' context 'sortie_status' %}">
+            {% elif sortie.is_not_takeoff %}
+                    <img src="{% static 'img/sortie/status/in_flight_big.png' %}" width="28" height="28"
+                         title="{% trans 'In Flight' context 'sortie_status' %}"
+                         alt="{% trans 'In Flight' context 'sortie_status' %}">
             {% endif %}
         </div>
         <div class="pilot_nickname">
