Properly link gunner rating position.

--- a/src/mod_rating_by_type/templates/gunner.html
+++ b/src/mod_rating_by_type/templates/gunner.html
@@ -101,7 +101,7 @@
                     <div class="text">{% trans 'Position in Rating' %}</div>
                     <div class="num" title="{{ player.rating }}">
                         {% if rating_position %}
-                            <a href="{% url 'stats:pilots' %}?page={{ page_position }}&tour={{ player.tour_id }}">{{ rating_position }}</a>
+                            <a href="{% url 'stats:gunners' %}?page={{ page_position }}&tour={{ player.tour_id }}">{{ rating_position }}</a>
                         {% else %}
                             <span title="">?</span>
                         {% endif %}
